--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -69,7 +69,7 @@ a, a:visited {
 }
 
 ##{$appname}-bg {
-    position: absolute;
+    position: fixed;
     top: 0px; left: 0px;
     background-color: transparentize($background, .3);
     display: none;
@@ -85,7 +85,7 @@ a, a:visited {
     width: 80%;
     max-width: 600px;
     background-color: darken($background, 1%);
-    position: absolute;
+    position: fixed;
     padding: 31px 30px 26px;
     top: -20%;
     left: 50%;
