--- a/sass/reporter.scss
+++ b/sass/reporter.scss
@@ -1,6 +1,6 @@
 @import "bourbon/bourbon";
 @import "neat/neat";
-@import "base/base";
+//@import "base/base";
 
 $base-border-radius: 3px !default;
 $appname: 'reporter';
