--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -1,3 +1,4 @@
+#reporter-feedback, #reporter-container {
 #{$all-button-inputs},
 button {
   @include appearance(none);
@@ -28,4 +29,5 @@ button {
     cursor: not-allowed;
     opacity: 0.5;
   }
+}
 }
