--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,6 +7,7 @@ body {
   line-height: $base-line-height;
 }
 
+#reporter-feedback, #reporter-container {
 h1,
 h2,
 h3,
@@ -52,4 +53,5 @@ img,
 picture {
   margin: 0;
   max-width: 100%;
+}
 }
